@@ -40,6 +40,7 @@ import org.apache.ofbiz.webapp.WebAppUtil;
 import org.apache.ofbiz.ws.rs.common.AuthenticationScheme;
 import org.apache.ofbiz.ws.rs.core.ResponseStatus;
 import org.apache.ofbiz.ws.rs.listener.ApiContextListener;
+import org.apache.ofbiz.ws.rs.model.ModelOperation;
 
 import io.swagger.v3.oas.models.headers.Header;
 import io.swagger.v3.oas.models.media.ArraySchema;
@@ -67,9 +68,16 @@ public final class OpenApiUtil {
     private static final Map<String, String> LIST_TYPE_MAP = new HashMap<>();
     private static final Map<String, String> CLASS_ALIAS = new HashMap<>();
     private static final Map<String, Class<?>> JAVA_OPEN_API_MAP = new HashMap<>();
-    private static final Map<String, String> FIELD_TYPE_MAP = new HashMap<String, String>();
+    private static final Map<String, String> FIELD_TYPE_MAP = new HashMap<>();
     private static final Map<String, ApiResponse> RESPONSES = new HashMap<>();
     private static final Map<String, Schema<?>> SCHEMAS = new HashMap<>();
+    private static final Map<String, ApiResponse> CUSTOM_RESPONSES = new HashMap<>();
+    private static final Schema<?> GENERIC_ERROR_SCHEMA = new MapSchema()
+            .addProperty("statusCode", new IntegerSchema().description("HTTP Status Code"))
+            .addProperty("statusDescription", new StringSchema().description("HTTP Status Code Description"))
+            .addProperty("errorType", new StringSchema().description("Error Type for the error"))
+            .addProperty("errorMessage", new StringSchema().description("Error Message"));
+
 
     static {
         CLASS_ALIAS.put("String", "String");
@@ -161,21 +169,45 @@ public final class OpenApiUtil {
 
         buildApiResponseSchemas();
         buildApiResponses();
+        builCustomApiResponses();
     }
 
     private static void buildApiResponseSchemas() {
-        Schema<?> genericErrorSchema = new MapSchema();
-        genericErrorSchema.addProperty("statusCode", new IntegerSchema().description("HTTP Status Code"));
+        SCHEMAS.put("api.response.unauthorized.noheader", GENERIC_ERROR_SCHEMA);
+        SCHEMAS.put("api.response.unauthorized.invalidtoken", GENERIC_ERROR_SCHEMA);
+        SCHEMAS.put("api.response.forbidden", GENERIC_ERROR_SCHEMA);
+        SCHEMAS.put("api.response.service.badrequest", GENERIC_ERROR_SCHEMA);
+        SCHEMAS.put("api.response.service.unprocessableentity", GENERIC_ERROR_SCHEMA);
+        SCHEMAS.put("api.response.service.methodnotallowed", GENERIC_ERROR_SCHEMA);
+    }
 
-        genericErrorSchema.addProperty("statusDescription", new StringSchema().description("HTTP Status Code Description"));
-        genericErrorSchema.addProperty("errorType", new StringSchema().description("Error Type for the error"));
-        genericErrorSchema.addProperty("errorMessage", new StringSchema().description("Error Message"));
-        SCHEMAS.put("api.response.unauthorized.noheader", genericErrorSchema);
-        SCHEMAS.put("api.response.unauthorized.invalidtoken", genericErrorSchema);
-        SCHEMAS.put("api.response.forbidden", genericErrorSchema);
-        SCHEMAS.put("api.response.service.badrequest", genericErrorSchema);
-        SCHEMAS.put("api.response.service.unprocessableentity", genericErrorSchema);
-        SCHEMAS.put("api.response.service.methodnotallowed", genericErrorSchema);
+    /*
+     * Define your custom ApiResponses here
+     */
+    private static void builCustomApiResponses() {
+        /**
+         * Map<String, Object> customResponseExample = UtilMisc.toMap(
+         *      "statusCode", ResponseStatus.Custom.MY_CUSTOM_STATUS_CODE.getStatusCode(),
+         *      "statusDescription", ResponseStatus.Custom.MY_CUSTOM_STATUS_CODE.getReasonPhrase(),
+         *      "errorType", "An Error Type",
+         *      "errorCode", "1234",
+         *      "errorMessage", "Something went Wrong.",
+         *      "errorDescription", "A description of what went wrong.");
+         *
+         * final ApiResponse customResponse = new ApiResponse()
+         * .description("Custom Error: A description of said error.")
+         *       .content(new Content()
+         *               .addMediaType(jakarta.ws.rs.core.MediaType.APPLICATION_JSON, new MediaType()
+         *                       .schema(new Schema<>()
+         *                               .$ref("#/components/schemas/" + "api.response.custom.response.example"))
+         *                       .example(customResponseExample)));
+         *
+         * CUSTOM_RESPONSES.put(String.valueOf(ResponseStatus.Custom.MY_CUSTOM_STATUS_CODE.getStatusCode()), customResponse);
+        **/
+    }
+
+    public static ApiResponse getCustomApiResponseByStatusCode(String statusCode) {
+        return CUSTOM_RESPONSES.get(statusCode);
     }
 
     /**
@@ -208,12 +240,12 @@ public final class OpenApiUtil {
                 "errorMessage", "Forbidden: Insufficient rights to perform this API call.");
         Map<String, Object> badRequestExample = UtilMisc.toMap("statusCode", Response.Status.BAD_REQUEST.getStatusCode(),
                 "statusDescription", Response.Status.BAD_REQUEST.getReasonPhrase(),
-                "errorType", "ServiceValidationException",
+                "errorType", "ServiceValidationException", "errorCode", "1000",
                 "errorMessage", "createProduct validation failed. The request contained invalid information and could not be processed.",
                 "errorDescription", "The following required parameter is missing: [IN] [createProduct.internalName]");
         Map<String, Object> unprocessableEntExample = UtilMisc.toMap("statusCode", ResponseStatus.Custom.UNPROCESSABLE_ENTITY.getStatusCode(),
                 "statusDescription", ResponseStatus.Custom.UNPROCESSABLE_ENTITY.getReasonPhrase(),
-                "errorType", "GenericEntityException",
+                "errorType", "GenericEntityException", "errorCode", "2000",
                 "errorMessage", "createProduct execution failed. The request contained invalid information and could not be processed.",
                 "errorDescription", "StandardException: A truncation error was encountered trying to shrink CHAR 'string' to length 1.");
         Map<String, Object> methodNotAllowedExample = UtilMisc.toMap("statusCode", Response.Status.METHOD_NOT_ALLOWED.getStatusCode(),
@@ -316,19 +348,21 @@ public final class OpenApiUtil {
      * @param service the {@link ModelService} for which to build the input schema
      * @return an OpenAPI {@link Schema} representing the service request body
      */
-    public static Schema<Object> getInSchema(ModelService service) {
+    public static Schema<Object> getInSchema(ModelService service, ModelOperation op) {
         Schema<Object> parentSchema = new Schema<Object>();
         parentSchema.setDescription("In Schema for service: " + service.getName() + " request");
         parentSchema.setType("object");
         List<String> required = UtilMisc.toList();
         service.getInParamNamesMap().forEach((name, type) -> {
-            ModelParam param = service.getParam(name);
-            if (!param.isOptional()) {
-                required.add(name);
-            }
-            Schema<?> attrSchema = getAttributeSchema(service, param);
-            if (attrSchema != null) {
-                parentSchema.addProperty(name, getAttributeSchema(service, service.getParam(name)));
+            if (!RestApiUtil.SECURITY_PARAMS.contains(name) && (op == null || (op != null && !op.getCustomHeadersList().contains(name)))) {
+                ModelParam param = service.getParam(name);
+                if (!param.isOptional()) {
+                    required.add(name);
+                }
+                Schema<?> attrSchema = getAttributeSchema(service, param);
+                if (attrSchema != null) {
+                    parentSchema.addProperty(name, attrSchema);
+                }
             }
         });
         parentSchema.setRequired(required);
@@ -431,12 +465,18 @@ public final class OpenApiUtil {
         Schema<Object> dataSchema = new Schema<Object>();
         parentSchema.addProperty("data", dataSchema);
         service.getOutParamNamesMap().forEach((name, type) -> {
-            Schema<?> attrSchema = getAttributeSchema(service, service.getParam(name));
-            if (attrSchema != null) {
-                dataSchema.addProperty(name, getAttributeSchema(service, service.getParam(name)));
+            if (!name.equals(RestApiUtil.RESPONSE_STATUS_KEY)) {
+                Schema<?> attrSchema = getAttributeSchema(service, service.getParam(name));
+                if (attrSchema != null) {
+                    dataSchema.addProperty(name, getAttributeSchema(service, service.getParam(name)));
+                }
             }
         });
         return parentSchema;
+    }
+
+    public static Schema<?> getGenericErrorSchema(ModelService service) {
+        return GENERIC_ERROR_SCHEMA;
     }
 
     private static boolean isTypeGenericEntityOrGenericValue(String type) {
@@ -476,7 +516,35 @@ public final class OpenApiUtil {
                     continue;
                 }
                 try {
-                    schema = (Schema<?>) schemaClass.newInstance();
+                    schema = (Schema<?>) schemaClass.getDeclaredConstructor().newInstance();
+                    //@Schema(minLength = 1, maxLength = 20, nullable = false, example="10001", description = "Interne Party ID")
+                    io.swagger.v3.oas.annotations.media.Schema fieldAnnotation =
+                            field.getAnnotation(io.swagger.v3.oas.annotations.media.Schema.class);
+                    if (fieldAnnotation != null) {
+                        if (UtilValidate.isNotEmpty(fieldAnnotation.name())) {
+                            schema.setName(fieldAnnotation.name());
+                        }
+                        schema.setDescription(fieldAnnotation.description() != null ? fieldAnnotation.description() : fieldNm);
+                        if (UtilValidate.isNotEmpty(fieldAnnotation.example())) {
+                            schema.setExample(fieldAnnotation.example());
+                        }
+                        if (UtilValidate.isNotEmpty(fieldAnnotation.minLength())) {
+                            schema.setMinLength(fieldAnnotation.minLength());
+                        }
+                        if (UtilValidate.isNotEmpty(fieldAnnotation.maxLength())) {
+                            schema.setMaxLength(fieldAnnotation.maxLength());
+                        }
+                        if (UtilValidate.isNotEmpty(fieldAnnotation.defaultValue())) {
+                            schema.setDefault(fieldAnnotation.defaultValue());
+                        }
+                        if (UtilValidate.isNotEmpty(fieldAnnotation.format())) {
+                            schema.setFormat(fieldAnnotation.format());
+                        }
+                        if (UtilValidate.isNotEmpty(fieldAnnotation.nullable())) {
+                            schema.setNullable(fieldAnnotation.nullable());
+                        }
+                    }
+
                     if (schema instanceof ArraySchema) {
                         ParameterizedType genericType = (ParameterizedType) field.getGenericType();
                         Class<? extends Type> genericClass = (Class<? extends Type>) genericType.getActualTypeArguments()[0];
@@ -486,24 +554,25 @@ public final class OpenApiUtil {
                         if (listSchemaClass == null || isTypeDomainModel(genericClass.getName())) {
                             arrSch.setItems(getSchemaForModel(genericClass.getName()));
                         } else {
-                            listSchema = (Schema<?>) listSchemaClass.newInstance();
+                            listSchema = (Schema<?>) listSchemaClass.getDeclaredConstructor().newInstance();
                             arrSch.setItems(listSchema);
                         }
-                        dataSchema.addProperties(fieldNm, arrSch);
+                        dataSchema.addProperty(fieldNm, arrSch);
                     } else if (schema instanceof MapSchema) {
                         if (isTypeDomainModel(fieldType.getName())) {
                             schema = getSchemaForModel(fieldType.getName());
-                            dataSchema.addProperties(fieldNm, schema);
+                            dataSchema.addProperty(fieldNm, schema);
                         }
                     } else {
-                        dataSchema.addProperties(fieldNm, schema.description(fieldNm));
+                        dataSchema.addProperty(fieldNm, schema.description(fieldNm));
                     }
-                } catch (InstantiationException | IllegalAccessException e) {
-                    e.printStackTrace();
+                } catch (InstantiationException | IllegalAccessException | NoSuchMethodException
+                        | InvocationTargetException e) {
+                    Debug.logError(e, "Error evaluating class [%s].", MODULE, className);
                 }
             }
         } catch (ClassNotFoundException e1) {
-            e1.printStackTrace();
+            Debug.logError(e1, "Error evaluating class [%s].", MODULE, className);
         }
         return dataSchema;
     }
@@ -550,15 +619,21 @@ public final class OpenApiUtil {
      * OpenAPI response schema for the given service.
      *
      * @param service the {@link ModelService} for which to build the success response
+     * @param op {@link ModelOperation}
      * @return an {@link ApiResponse} with a JSON media type and a schema reference
      *         to {@code #/components/schemas/api.response.<serviceName>.success}
      */
-    public static ApiResponse buildSuccessResponse(ModelService service) {
-        final ApiResponse success = new ApiResponse()
+    public static ApiResponse buildSuccessResponse(ModelService service, ModelOperation op) {
+        final MediaType mediaType = new MediaType()
+                .schema(new Schema<>().$ref("#/components/schemas/" + "api.response." + service.getName() + ".success"));
+
+        if (op != null) {
+            mediaType.setExample(op.getExampleObject("response", "200"));
+        }
+
+        return new ApiResponse()
                 .description("Success response for the API call.")
                 .content(new Content()
-                        .addMediaType(jakarta.ws.rs.core.MediaType.APPLICATION_JSON, new MediaType()
-                                .schema(new Schema<>().$ref("#/components/schemas/" + "api.response." + service.getName() + ".success"))));
-        return success;
+                        .addMediaType(javax.ws.rs.core.MediaType.APPLICATION_JSON, mediaType));
     }
 }
